--- a/tryout/TryOutOfQLineEdit/tryoutofqlineedit.ui
+++ b/tryout/TryOutOfQLineEdit/tryoutofqlineedit.ui
@@ -33,6 +33,19 @@
     </rect>
    </property>
   </widget>
+  <widget class="QPushButton" name="pushButton">
+   <property name="geometry">
+    <rect>
+     <x>190</x>
+     <y>250</y>
+     <width>80</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Login</string>
+   </property>
+  </widget>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
  <resources/>
