--- a/dataconvert/dataConvert/publishmanager.ui
+++ b/dataconvert/dataConvert/publishmanager.ui
@@ -6,15 +6,15 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>744</width>
-    <height>396</height>
+    <width>790</width>
+    <height>567</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Form</string>
   </property>
-  <layout class="QVBoxLayout" name="verticalLayout">
-   <item>
+  <layout class="QGridLayout" name="gridLayout">
+   <item row="0" column="0">
     <widget class="QFrame" name="HeadFrame">
      <property name="frameShape">
       <enum>QFrame::StyledPanel</enum>
@@ -271,7 +271,7 @@ QLineEdit:disabled{background:#f3f5f7;border:1px solid #d3dce6;padding:0px 4px 0
      </layout>
     </widget>
    </item>
-   <item>
+   <item row="1" column="0">
     <widget class="QFrame" name="MenuFrame">
      <property name="frameShape">
       <enum>QFrame::StyledPanel</enum>
@@ -424,7 +424,7 @@ QPushButton:pressed{border:0px solid #29a1f7; font:14px;color:white;background-c
      </layout>
     </widget>
    </item>
-   <item>
+   <item row="2" column="0">
     <widget class="QTableWidget" name="tableWidget_2">
      <property name="minimumSize">
       <size>
@@ -433,38 +433,16 @@ QPushButton:pressed{border:0px solid #29a1f7; font:14px;color:white;background-c
       </size>
      </property>
      <property name="focusPolicy">
-      <enum>Qt::TabFocus</enum>
+      <enum>Qt::NoFocus</enum>
      </property>
      <property name="styleSheet">
-      <string notr="true">*{ outline: 0px;}
-QTableView {
-    color: black;								/*表格内文字颜色*/
-    gridline-color: #D4DCE6;					/*表格内框颜色*/
-    background-color: transparent;					/*表格内背景色*/
-    alternate-background-color: rgb(64, 64, 64);
-    selection-color: black;						/*选中区域的文字颜色*/
-    selection-background-color:#E7F1FC;			/*选中区域的背景色*/
-
-}
-
-.QHeaderView {
-    color: black;
-    font: bold 14px;
-    background-color: transparent;
-}
-
-.QHeaderView::section:horizontal           
-{
-	font:14px;
-	color:#282828;
-	background-color:#E7F1FC;
-	text-align:center;
-	min-height:30px;
-}
-</string>
+      <string notr="true"/>
      </property>
      <property name="editTriggers">
       <set>QAbstractItemView::NoEditTriggers</set>
+     </property>
+     <property name="dragDropOverwriteMode">
+      <bool>false</bool>
      </property>
      <property name="selectionMode">
       <enum>QAbstractItemView::NoSelection</enum>
@@ -476,10 +454,10 @@ QTableView {
       <bool>true</bool>
      </property>
      <property name="rowCount">
-      <number>10</number>
+      <number>2</number>
      </property>
      <attribute name="horizontalHeaderDefaultSectionSize">
-      <number>200</number>
+      <number>100</number>
      </attribute>
      <attribute name="horizontalHeaderMinimumSectionSize">
       <number>30</number>
@@ -494,16 +472,8 @@ QTableView {
       <bool>false</bool>
      </attribute>
      <attribute name="verticalHeaderStretchLastSection">
-      <bool>true</bool>
+      <bool>false</bool>
      </attribute>
-     <row/>
-     <row/>
-     <row/>
-     <row/>
-     <row/>
-     <row/>
-     <row/>
-     <row/>
      <row/>
      <row/>
      <column>
