--- a/dataconvert/dataConvert/publishmanager.ui
+++ b/dataconvert/dataConvert/publishmanager.ui
@@ -16,6 +16,9 @@
   <layout class="QGridLayout" name="gridLayout">
    <item row="0" column="0">
     <widget class="QFrame" name="HeadFrame">
+     <property name="styleSheet">
+      <string notr="true"/>
+     </property>
      <property name="frameShape">
       <enum>QFrame::StyledPanel</enum>
      </property>
@@ -52,6 +55,12 @@
           <height>30</height>
          </size>
         </property>
+        <property name="font">
+         <font>
+          <family>Agency FB</family>
+          <pointsize>11</pointsize>
+         </font>
+        </property>
         <property name="styleSheet">
          <string notr="true">QLable{font:14px; color:#282828;}</string>
         </property>
@@ -62,6 +71,9 @@
       </item>
       <item>
        <widget class="QFrame" name="frame">
+        <property name="styleSheet">
+         <string notr="true">QFrame {background-color: #d9d9d9;border-radius: 4px;border: 1px solid #b3b3b3;}</string>
+        </property>
         <property name="frameShape">
          <enum>QFrame::StyledPanel</enum>
         </property>
@@ -70,7 +82,7 @@
         </property>
         <layout class="QHBoxLayout" name="horizontalLayout">
          <property name="spacing">
-          <number>10</number>
+          <number>0</number>
          </property>
          <property name="leftMargin">
           <number>0</number>
@@ -99,7 +111,7 @@
             </size>
            </property>
            <property name="styleSheet">
-            <string notr="true">QPushButton:!checked{border:0px;font:14px;background:transparent;color:#282828;}
+            <string notr="true">QPushButton:!checked{border-right: 1px solid #999999;border-left: 0px; border-top: 0px; border-bottom: 0px;font:14px;background:transparent;color:#282828;}
 QPushButton:checked{font: 14px;color: #ffffff;background-color:#29a1f7;border:0px;border-radius:2px;}
 </string>
            </property>
@@ -132,9 +144,8 @@ QPushButton:checked{font: 14px;color: #ffffff;background-color:#29a1f7;border:0p
             <cursorShape>PointingHandCursor</cursorShape>
            </property>
            <property name="styleSheet">
-            <string notr="true">QPushButton:!checked{border:0px;font:14px;background:transparent;color:#282828;}
-QPushButton:checked{font: 14px;color: #ffffff;background-color:#29a1f7;border:0px;border-radius:2px;}
-</string>
+            <string notr="true">QPushButton:!checked{border-right: 1px solid #999999;border-left: 0px; border-top: 0px; border-bottom: 1px;font:14px;background:transparent;color:#282828;}
+QPushButton:checked{font: 14px;color: #ffffff;background-color:#29a1f7;border:0px;border-radius:2px;}</string>
            </property>
            <property name="text">
             <string>上架</string>
@@ -162,7 +173,7 @@ QPushButton:checked{font: 14px;color: #ffffff;background-color:#29a1f7;border:0p
             <cursorShape>PointingHandCursor</cursorShape>
            </property>
            <property name="styleSheet">
-            <string notr="true">QPushButton:!checked{border:0px;font:14px;background:transparent;color:#282828;}
+            <string notr="true">QPushButton:!checked{border-right: 1px solid #999999;border-left: 0px; border-top: 0px; border-bottom:0px;font:14px;background:transparent;color:#282828;}
 QPushButton:checked{font: 14px;color: #ffffff;background-color:#29a1f7;border:0px;border-radius:2px;}
 </string>
            </property>
@@ -192,8 +203,9 @@ QPushButton:checked{font: 14px;color: #ffffff;background-color:#29a1f7;border:0p
             <cursorShape>PointingHandCursor</cursorShape>
            </property>
            <property name="styleSheet">
-            <string notr="true">QPushButton:!checked{border:0px;font:14px;background:transparent;color:#282828;}
+            <string notr="true">QPushButton:!checked{border-right: 0px solid #999999;border-left: 0px; border-top: 0px; border-bottom: 0px;font:14px;background:transparent;color:#282828;}
 QPushButton:checked{font: 14px;color: #ffffff;background-color:#29a1f7;border:0px;border-radius:2px;}
+
 </string>
            </property>
            <property name="text">
