--- a/dataconvert/dataConvert/mainwindow.ui
+++ b/dataconvert/dataConvert/mainwindow.ui
@@ -66,38 +66,61 @@ QComboBox QAbstractItemView::item:selected{background-color: #2087d3;}
        <item>
         <widget class="QPushButton" name="productImport">
          <property name="styleSheet">
-          <string notr="true">.QPushButton{font:14px;color:black;background:#FFFFFF;border:1px solid #D3DCE6;border-radius:0px;padding:5px 10px 5px 10px;}
-.QPushButton:hover{background-color:#EFFAFE;}
-.QPushButton:checked{color:white;background-color:#2087d3;}</string>
+          <string notr="true">QPushButton{font:14px;color:black;background:#FFFFFF;border:1px solid #D3DCE6;border-radius:0px;padding:5px 10px 5px 10px;}
+QPushButton:hover{background-color:#EFFAFE;}
+QPushButton:checked{color:white;background-color:#2087d3;}</string>
          </property>
          <property name="text">
           <string>商品导入</string>
+         </property>
+         <property name="checkable">
+          <bool>true</bool>
          </property>
         </widget>
        </item>
        <item>
         <widget class="QPushButton" name="publishManage">
          <property name="styleSheet">
-          <string notr="true">.QPushButton{font:14px;color:black;background:#FFFFFF;border:1px solid #D3DCE6;border-radius:0px;padding:5px 10px 5px 10px;}
-.QPushButton:hover{background-color:#EFFAFE;}
-.QPushButton:checked{color:white;background-color:#2087d3;}</string>
+          <string notr="true">QPushButton{font:14px;color:black;background:#FFFFFF;border:1px solid #D3DCE6;border-radius:0px;padding:5px 10px 5px 10px;}
+QPushButton:hover{background-color:#EFFAFE;}
+QPushButton:checked{color:white;background-color:#2087d3;}</string>
          </property>
          <property name="text">
           <string>发布管理</string>
+         </property>
+         <property name="checkable">
+          <bool>true</bool>
          </property>
         </widget>
        </item>
        <item>
         <widget class="QPushButton" name="modelSetting">
          <property name="styleSheet">
-          <string notr="true">.QPushButton{font:14px;color:black;background:#FFFFFF;border:1px solid #D3DCE6;border-radius:0px;padding:5px 10px 5px 10px;}
-.QPushButton:hover{background-color:#EFFAFE;}
-.QPushButton:checked{color:white;background-color:#2087d3;}</string>
+          <string notr="true">QPushButton{font:14px;color:black;background:#FFFFFF;border:1px solid #D3DCE6;border-radius:0px;padding:5px 10px 5px 10px;}
+QPushButton:hover{background-color:#EFFAFE;}
+QPushButton:checked{color:white;background-color:#2087d3;}
+</string>
          </property>
          <property name="text">
           <string>模板设置</string>
          </property>
+         <property name="checkable">
+          <bool>true</bool>
+         </property>
         </widget>
+       </item>
+       <item>
+        <spacer name="horizontalSpacer">
+         <property name="orientation">
+          <enum>Qt::Horizontal</enum>
+         </property>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>40</width>
+           <height>20</height>
+          </size>
+         </property>
+        </spacer>
        </item>
       </layout>
      </widget>
@@ -160,7 +183,7 @@ QTabBar::tab:selected {
   <customwidget>
    <class>PublishManager</class>
    <extends>QWidget</extends>
-   <header location="global">publishmanager.h</header>
+   <header>publishmanager.h</header>
    <container>1</container>
   </customwidget>
  </customwidgets>
