关于toggled信号的用法区别于clicked信号的demo

--- a/test4/signalEmitAgain/widget.ui
+++ b/test4/signalEmitAgain/widget.ui
@@ -25,6 +25,9 @@
    <property name="text">
     <string>PushButton</string>
    </property>
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
   </widget>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
